--- a/web/static/templates/disclaimer.html
+++ b/web/static/templates/disclaimer.html
@@ -10,120 +10,129 @@
                             REGON: 142968125, NIP: 1132027580 (“Operator” lub
                             “My”).</p>
 
-                        <p>Korzystając z aplikacji Kujon lub strony internetowej pod adresem Kujon.mobi (wspólnie
-                            jako “Kujon” lub “Aplikacja”) zgadzasz się na warunki
-                            zawarte w Regulaminie (“Umowa”). Powinieneś także zapoznać się z Polityką
-                                Prywatności, odwołanie do której znajdziesz w niniejszej
-                            Umowie. Jeśli nie zgadzasz się ze wszystkimi zasadami zawartymi w
-                            niniejszej Umowie, łącznie z Polityką Prywatności,
-                            prosimy o zaprzestanie korzystania z aplikacji. Prosimy o kontakt w przypadku pytań
-                            związanych z niniejszą Umową.</p>
+                        <p>Korzystając z aplikacji Kujon lub strony internetowej pod adresem Kujon.mobi
+                            (wspólnie jako “Kujon” lub “Aplikacja”) użytkownik zgadza się na warunki zawarte w
+                            Regulaminie (“Umowa”) oraz potwierdza zapoznanie się z Polityką Prywatności,
+                            odwołanie do której znajdzie w niniejszej Umowie. Jeśli użytkownik aplikacji
+                            nie zgadza się ze wszystkimi zasadami zawartymi w niniejszej Umowie, łącznie z
+                            Polityką Prywatności, prosimy o zaprzestanie korzystania z aplikacji. W wypadku
+                            ewentualnych pytań pytań związanych z niniejszą Umową prosimy o kontakt.</p>
                         <h2>I. POSTANOWIENIA OGÓLNE</h2>
                         <ol>
-                            <li>Niniejsza Umowa (łącznie z Polityką Prywatności) spełnia wymagania Ustawy o świadczeniu
-                                usług drogą elektroniczną z 18 lipca 2002 roku, to znaczy określa świadczone usługi,
-                                wymagania (łącznie z wymaganiami technicznymi), politykę prywatności, warunki
-                                świadczenia usług elektronicznych, procedurę reklamacji, etc.
+                            <li>Polityka Prywatności jest częścią niniejszej umowy</li>
+                            <li>Niniejsza Umowa spełnia wymagania Ustawy o świadczeniu usług drogą elektroniczną
+                                z 18 lipca 2002 roku, to znaczy określa świadczone usługi, wymagania
+                                (łącznie z wymaganiami technicznymi), politykę prywatności, warunki świadczenia
+                                usług elektronicznych, procedurę reklamacji.
                             </li>
-                            <li>Poprzez akceptację niniejszej Umowy, przed lub w momencie instalacji Kujon, całkowicie
-                                zgadzasz się na jej warunki, bez konieczności zawarcia oddzielnej umowy. Akceptacja
-                                niniejszej Umowy jest niezbędna do korzystania z Kujon.
+                            <li>Poprzez akceptację niniejszej Umowy, przed lub w momencie instalacji Kujon,
+                                użytkownik całkowicie zgadza się na jej warunki, bez konieczności zawarcia
+                                oddzielnej umowy. Akceptacja niniejszej Umowy jest niezbędna do korzystania z Kujon.
                             </li>
-                            <li>Jeśli chcesz wypowiedzieć akceptację niniejszej Umowy, prosimy o zaprzestanie używania
-                                Kujon, oraz usunięcie (odinstalowanie) aplikacji.
+                            <li>Jeśli użytkownik chce wypowiedzieć akceptację niniejszej Umowy, jest proszony o
+                                zaprzestanie używania Kujon, oraz usunięcie (odinstalowanie) aplikacji.
                             </li>
-                            <li>Instalacja oraz korzystanie z Kujon są darmowe. Kwestia transmisji danych wymaganej w
-                                celu pobrania i korzystania z Kujon stanowi przedmiot oddzielnej umowy z twoim dostawcą
-                                Internetu.
+                            <li>Instalacja oraz korzystanie z Kujon są darmowe. Kwestia transmisji danych
+                                wymaganej w celu pobrania i korzystania z Kujon stanowi przedmiot oddzielnej
+                                umowy pomiędzy użytkownikiem Kujon, a dostawcą Internetu.
                             </li>
                         </ol>
                         <h2>II. ŚWIADCZONE USŁUGI</h2>
                         <ol>
-                            <li>Kujon umożliwia mobieranie danych z studenckich.
-                                Korzystanie z API i Kujon musi spełniać wymagania i regulaminy korzytania z
-                                aplikacji studenckiej.
+                            <li>1. Kujon umożliwia pobieranie danych z studenckich dostępnych dla danego użytkownika.
+                                Użytkownik aby korzystać z API i Kujon musi spełniać wymagania i regulaminy
+                                korzystania z aplikacji studenckiej.
                             </li>
                             </li>
-                            <li>Kujon jest dostępny na urządzenia mobilne (smartfony), spełniające następujące
-                                wymagania:
+                            <li>Kujon jest dostępny jako aplikacja na urządzenia mobilne (smartfony), spełniające
+                                następujące wymagania:
                                 <ol style="list-style-type: lower-latin;">
                                     <li>Dla Kujon na AppStore: iPhone 5 lub wyżej</li>
                                     <li>Dla Kujon na GooglePlay : Android 4.0 lub wyżej</li>
                                 </ol>
                             </li>
-                            <li>Jesteś zobowiązany do korzystania z Kujon w zgodzie z prawem, niniejszą Umową oraz
-                                innymi ogólnymi zasadami życia społecznego. W szczególności jesteś zobowiązany do:
+                            <li>Użytkownik zobowiązany jest do korzystania z Kujon w zgodzie z prawem, niniejszą
+                                Umową oraz innymi ogólnymi zasadami życia społecznego. W szczególności jest
+                                zobowiązany do korzystania z Kujon:
                                 <ol style="list-style-type: lower-latin;">
-                                    <li>Korzystania z Kujon w sposób nieutrudniający korzystania z aplikacji innym
-                                        użytkownikom lub Operatorowi,
+                                    <li>w sposób nieutrudniający korzystania z aplikacji innym użytkownikom lub
+                                        Operatorowi
                                     </li>
-                                    <li>Korzystania z Kujon w sposób niezakłócający funkcjonowania aplikacji,</li>
-                                    <li>Korzystania z Kujon oraz innych udostępnionych materiałów w celach zgodnych z
-                                        prawem.
-                                    </li>
+                                    <li>w sposób niezakłócający funkcjonowania aplikacji,</li>
+                                    <li>oraz innych udostępnionych materiałów w celach zgodnych z prawem.</li>
                                 </ol>
                             </li>
                             <li>Nie ma tolerancji dla niewłaściwych, szkodliwych treści.</li>
-                            <li>W przypadku napotkania jakichkolwiek przypadków łamania powyższych zasad, powinieneś
-                                natychmiast poinformować Operatora wysyłając e-mail na adres <a
-                                        href="mailto:kujon@kujon.mobi">kujon@kujon.mobi</a>.
+                            <li>5. W przypadku napotkania jakichkolwiek przypadków łamania powyższych zasad,
+                                użytkownik jest zobowiązany natychmiastowego poinformowania Operatora
+                                wysyłając e-mail na adres<a href="mailto:kujon@kujon.mobi">kujon@kujon.mobi</a>.
                             </li>
-                            <li>W przypadku zgłoszenia niewłaściwych lub szkodliwych treści (a także innych naruszeń
-                                Regulaminu) podejmiemy reakcję niezwłocznie. Reakcja może skutkować usunięciem
-                                niewłaściwych treści oraz usunięciem konta użytkownika, który te treści dodał.
+                            <li>W przypadku zgłoszenia niewłaściwych lub szkodliwych treści (a także innych
+                                naruszeń Regulaminu) Operator podejmie reakcję niezwłocznie. Reakcja może skutkować
+                                usunięciem niewłaściwych treści oraz usunięciem konta użytkownika, który te treści
+                                dodał.
                             </li>
                             <li>Korzystanie z aplikacji jest darmowe.</li>
                         </ol>
                         <h2>III. REJESTRACJA ORAZ ZAMKNIĘCIE KONTA</h2>
                         <ol>
-                            <li>Musisz mieć skończone 18 lat by uzyskać dostęp i możliwość korzystania z Kujon.</li>
-                            <li>Poprzez uruchomienie i korzystanie z Kujon, poświadczasz, że posiadasz prawo,
-                                kompetencje oraz zdolność do zawarcia niniejszej Umowy a także zobowiązujesz się do
+                            <li>Aby uzyskać dostęp i możliwość korzystania z Kujon użytkownik musi mieć skończone 18
+                                lat.
+                            </li>
+                            <li>Poprzez uruchomienie i korzystanie z Kujon, użytkownik poświadcza, że posiada prawo,
+                                kompetencje oraz zdolność do zawarcia niniejszej Umowy, a także zobowiązuje się do
                                 przestrzegania wszelkich jej warunków.
                             </li>
-                            <li>Korzystanie z Kujon może być zakazane lub ograniczone w niektórych krajach. Jesteś
-                                odpowiedzialny za przestrzeganie praw i regulacji obowiązujących na terytorium, z
-                                którego próbujesz uzyskać dostęp do Kujon.
+                            <li>Korzystanie z Kujon może być zakazane lub ograniczone w niektórych krajach.
+                                Jesteś odpowiedzialny za przestrzeganie praw i regulacji obowiązujących na terytorium,
+                                z którego próbujesz uzyskać dostęp do Kujon.
                             </li>
-                            <li>By korzystać z Kujon, musisz się zarejestrować lub zalogować przy użyciu swojego konta
-                                w serwisie Facebook lub Google.
+                            <li>Aby korzystać z Kujon, użytkownik musi się zarejestrować lub zalogować przy użyciu
+                                swojego konta w serwisie Facebook lub Google.
                             </li>
-                            <li>Możesz w dowolnej chwili zaprzestać korzystania z Kujon, w szczególności jeśli nie
-                                akceptujesz zmian w niniejszej Umowie, Polityce Prywatności lub w samym Kujon.
+                            <li>Użytkownik może w dowolnej chwili zaprzestać korzystania z Kujon, w szczególności
+                                jeśli nie akceptuje zmian w niniejszej Umowie, Polityce Prywatności lub w aplikacji
+                                Kujon.
                             </li>
-                            <li>By przestać korzystać z Kujon usuń aplikację ze swojego urządzenia mobilnego.</li>
-                            <li>Niniejsza Umowa zawarta jest na czas nieokreślony. By rozwiązać Umowę, przestań
-                                korzystać Kujon i usuń aplikację ze swojego urządzenia mobilnego. Dodatkowo możesz
-                                tez usunąć konto w serwisie <a href="https://kujon.mobi/">kujon.mobi</a>.
+                            <li>Aby przestać korzystać z Kujon użytkownik musi usunąć aplikację ze swojego urządzenia
+                                mobilnego.
                             </li>
-                            <li>Może również usunąć lub zawiesić twoje konto w dowolnej chwili bez dodatkowej
-                                informacji, w przypadku, gdy zaistnieją podejrzenia, że zerwałeś niniejszą Umowę, lub z
+                            <li>Niniejsza Umowa zawarta jest na czas nieokreślony. By rozwiązać Umowę, użytkownik
+                                przestać korzystać Kujon i usunąć aplikację ze swojego urządzenia mobilnego.
+                                Użytkownik posiada również możliwość usunięcia konta w serwisie
+                                <a href="https://kujon.mobi/">kujon.mobi</a></li>
+                            <li>Operator zastrzega sobie prawa do usunięcia lub zawieszenia konta użytkownika w
+                                dowolnej chwili, bez podania dodatkowej informacji, w przypadku, gdy zaistnieją
+                                podejrzenia, że użykownik zerwał niniejszą Umowę, złamał zapisy niniejszej umowy, bądź z
                                 innego powodu.
                             </li>
-                            <li>Posiadamy prawo do zawieszenia Kujon w dowolnej chwili, z dowolnego powodu, jak również
-                                do wycofania Kujon, wprowadzania zmian oraz poszerzenia zakresu świadczonych usług.
+                            <li>Operator posiada prawo do zawieszenia działania Kujon lub do wycofania Kujon w
+                                dowolnej chwili, z dowolnego powodu, wprowadzania zmian oraz poszerzenia zakresu
+                                świadczonych usług.
                             </li>
                         </ol>
                         <h2>IV. KORZYSTANIE Z APLIKACJI</h2>
                         <ol>
-                            <li>Do korzystania z Kujon potrzebujesz Smartfona, lub innego urządzenia z systemem
-                                operacyjnym Android lub Apple z dostępem do Internetu oraz usług lokalizacyjnych.
+                            <li>1Aby skorzystać z Kujon użytkownik musi posiadać Smartfon, lub inne urządzenia z
+                                systemem operacyjnym Android lub Apple, użądzenie musi posiadać dostęp do
+                                Internetu oraz usług lokalizacyjnych.
                             </li>
-                            <li>Wszystkie wiadomości oraz zdjęcia wymieniane podczas korzystania z Kujon są tymczasowe
-                                i znikają po upływie czasu lub wymianie pewnej liczby wiadomości.
+                            <li>Wszystkie wiadomości oraz zdjęcia wymieniane podczas korzystania z Kujon są
+                                tymczasowe i znikają po upływie czasu lub podlegają nadpisaniu.
                             </li>
                         </ol>
                         <h2>V. PRAWA INTELEKTUALNE I LICENCJE</h2>
                         <ol>
                             <li>Użytkownik musi zaakceptować Regulamin.</li>
-                            <li>Możesz korzystać z Kujon tylko w celach prywatnych.</li>
-                            <li>Kujon, jak również wszelkie dotyczące go dane i informacje, wliczając w to teksty,
+                            <li>Korzystanie z Kujon jest możliwe wyłącznie w celach prywatnych.</li>
+                            <li>3. Kujon, jak również wszelkie dotyczące go dane i informacje, wliczając w to teksty,
                                 rozwiązania nawigacyjne (techniczne), loga, element graficzne etc. stanowią własność
                                 Operatora lub podmiotów trzecich, zgodnie z ustawą o Prawie Autorskim z of 1994.
                             </li>
-                            <li>Gdy zaczynasz korzystać z Kujon, Operator udziela Ci licencji na korzystanie z Kujon na
-                                Twoim urządzeniu mobilnym. Nie masz wyłącznego prawa do korzystania z tej licencji, jak
-                                również nie masz prawa do jej przenoszenia ani dysponowania nią.
+                            <li>Z chwilą rozpoczęcia korzystania z Kujon, Operator udziela użytkownikowi licencji na
+                                korzystanie z Kujon na jego urządzeniu mobilnym. Użytkownik nie masz wyłącznego prawa
+                                do korzystania z tej licencji, jak również nie ma prawa do jej przenoszenia ani
+                                dysponowania nią.
                             </li>
                             <li>Kujon jest zintegrowany z USOS czyli Uniwersyteckim Systemem Obsługi Studiów, którego
                                 właścicielem jest Międzyuniwersyteckie Centrum ds. Informatyzacji
@@ -139,9 +148,11 @@
                         </ol>
                         <h2>VI. ODPOWIEDZIALNOŚĆ </h2>
                         <ol>
-                            <li>Staramy się zapewnić jak najlepsze funkcjonowanie Aplikacji. Nie jesteśmy jednak w
-                                stanie zagwarantować stałego dostępu do wszystkich jej funkcjonalności oraz ich
-                                idealnego działania.
+                            <li>1. Operator dąży do zapewnienia jak najlepszego funkcjonowanie Aplikacji. Operator
+                                nie jest jednak w stanie zagwarantować stałego dostępu do wszystkich jej
+                                funkcjonalności,
+                                ich idealnego działania oraz przewidzieć wypadki losowę mogące wpłynąć na działanie
+                                Kujon.
                             </li>
                             <li>Kujon nie jest odpowiedzialna za:
                                 <ol style="list-style-type: lower-latin;">
@@ -156,12 +167,11 @@
                         </ol>
                         <h2>VII. REKLAMACJE</h2>
                         <ol>
-                            <li>Reklamacje związane z aplikacją, świadczonymi usługami lub inne pytania prosimy kierować
-                                na adres <a href="mailto:kujon@kujon.mobi">kujon@kujon.mobi</a>.
-                            </li>
-                            <li>W ciągu 10 dni od otrzymania reklamacji, zostaniesz poinformowany o jej wyniku. Możemy
-                                się zwrócić z prośbą o dodatkowe informacje, w przypadku gdy będą niezbędne do
-                                rozstrzygnięcia reklamacji.
+                            <li>Reklamacje związane z aplikacją, świadczonymi usługami lub inne można kierować
+                                na adres <a href="mailto:kujon@kujon.mobi">kujon@kujon.mobi</a></li>
+                            <li>2. W ciągu 10 dni od otrzymania reklamacji, użytkownik zostanie poinformowany o jej
+                                wyniku. Operator może zwrócić się do użytkownika z prośbą o dodatkowe informacje,
+                                w przypadku, gdy będą niezbędne do rozstrzygnięcia reklamacji.
                             </li>
                         </ol>
                         <h2>VIII. POLITYKA PRYWATNOŚCI</h2>
