--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -4,26 +4,26 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Kujon - mobilny dostęp danych studenckich</h2>
-                <p class="lead">Najlepszy dostęp do Twoich studenckich danych poprzez Twojego smartphona. Dzięki
+                <h2 class="page-header">Kujon - mobilny dostęp do Twojej uczelni</h2>
+                <p class="lead">Najlepszy dostęp do Twoich studenckich danych poprzez Twojego smarfona. Dzięki
                     kujonowi możesz na swoim telefonie przeglądać plan zajęć, przedmioty i oceny a także znajomych
-                    studentów których poznałeś w trakcie studiów.
+                    których poznałeś w trakcie studiów.
                 </p>
             </div>
         </div>
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Integrujemy się z największymi uczelniami w kraju.</h2>
+                <h2 class="page-header">Integrujemy się z największymi uczelniami w tym</h2>
             </div>
         </div>
 
         <div class="row">
 
             {{#data}}
-            <div class="col-md-1 col-xs-4 thumb">
+            <div class="col-md-2 col-xs-4">
                 <a class="thumbnail" href="#" title="{{name}}">
-                    <img class="img-responsive" src="{{logo}}" >
+                    <img class="img-responsive" src="{{logo}}">
                 </a>
             </div>
             {{/data}}
