fix courses + courses_editions

--- a/web/static/templates/modal_lecturer.html
+++ b/web/static/templates/modal_lecturer.html
@@ -76,7 +76,7 @@
                                         <div class="well">
                                             {{#course_editions_conducted}}
                                             <p>
-                                                {{course_name}}, {{term_id}}
+                                                {{course_name}} ({{course_id}}), {{term_id}}
                                             </p>
                                             <br>
                                             {{/course_editions_conducted}}
