--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -1,6 +1,6 @@
 <table class="table table-hover table-responsive">
 <tbody>
-  <tr><td>Jednostka</td><td>{{fac_id.name}} {{fac_id.postal_address}} {{fac_id.phone_numbers}}</td></tr>
+  <tr><td>Jednostka</td><td>{{fac_id.name}}</td></tr>
   {{#if lang_id}}
   <tr><td>Język prowadzenia</td><td>{{lang_id}}</td></tr>
   {{/if}}
