fix term name in pl

--- a/web/static/templates/terms.html
+++ b/web/static/templates/terms.html
@@ -15,7 +15,7 @@
             <tbody>
             {{#data}}
             <tr>
-                <td>{{name.pl}}</td>
+                <td>{{name}}</td>
                 <td>{{term_id}}</td>
                 <td>{{#if active}}TAK{{else}}NIE{{/if}}</td>
                 <td>{{start_date}}</td>
