--- a/web/static/templates/disclaimer.html
+++ b/web/static/templates/disclaimer.html
@@ -39,9 +39,8 @@
                         </ol>
                         <h2>II. ŚWIADCZONE USŁUGI</h2>
                         <ol>
-                            <li>1. Kujon umożliwia pobieranie danych z studenckich dostępnych dla danego użytkownika.
-                                Użytkownik aby korzystać z API i Kujon musi spełniać wymagania i regulaminy
-                                korzystania z aplikacji studenckiej.
+                            <li>Kujon umożliwia pobieranie danych studenckich na które pobranie użytkownik wyraża zgodę
+                                z Uczelni poprzez udostępniony interfejs.
                             </li>
                             </li>
                             <li>Kujon jest dostępny jako aplikacja na urządzenia mobilne (smartfony), spełniające
@@ -50,6 +49,7 @@
                                     <li>Dla Kujon na AppStore: iPhone 5 lub wyżej</li>
                                     <li>Dla Kujon na GooglePlay : Android 4.0 lub wyżej</li>
                                 </ol>
+                                a także jako aplikacja www dostępna pod adresem <a href="http://www.kujon.mobi">kujon.mobi</a>.
                             </li>
                             <li>Użytkownik zobowiązany jest do korzystania z Kujon w zgodzie z prawem, niniejszą
                                 Umową oraz innymi ogólnymi zasadami życia społecznego. W szczególności jest
@@ -58,21 +58,19 @@
                                     <li>w sposób nieutrudniający korzystania z aplikacji innym użytkownikom lub
                                         Operatorowi
                                     </li>
-                                    <li>w sposób niezakłócający funkcjonowania aplikacji,</li>
-                                    <li>oraz innych udostępnionych materiałów w celach zgodnych z prawem.</li>
+                                    <li>w sposób niezakłócający funkcjonowania aplikacji i systemów uniwersyteckich.</li>
                                 </ol>
                             </li>
-                            <li>Nie ma tolerancji dla niewłaściwych, szkodliwych treści.</li>
-                            <li>5. W przypadku napotkania jakichkolwiek przypadków łamania powyższych zasad,
+                            <li>U nas nie ma tolerancji dla niewłaściwych, szkodliwych treści.</li>
+                            <li>W przypadku napotkania jakichkolwiek przypadków łamania powyższych zasad,
                                 użytkownik jest zobowiązany natychmiastowego poinformowania Operatora
-                                wysyłając e-mail na adres<a href="mailto:kujon@kujon.mobi">kujon@kujon.mobi</a>.
+                                wysyłając e-mail na adres <a href="mailto:kujon@kujon.mobi">kujon@kujon.mobi</a>.
                             </li>
                             <li>W przypadku zgłoszenia niewłaściwych lub szkodliwych treści (a także innych
                                 naruszeń Regulaminu) Operator podejmie reakcję niezwłocznie. Reakcja może skutkować
                                 usunięciem niewłaściwych treści oraz usunięciem konta użytkownika, który te treści
                                 dodał.
                             </li>
-                            <li>Korzystanie z aplikacji jest darmowe.</li>
                         </ol>
                         <h2>III. REJESTRACJA ORAZ ZAMKNIĘCIE KONTA</h2>
                         <ol>
@@ -83,10 +81,6 @@
                                 kompetencje oraz zdolność do zawarcia niniejszej Umowy, a także zobowiązuje się do
                                 przestrzegania wszelkich jej warunków.
                             </li>
-                            <li>Korzystanie z Kujon może być zakazane lub ograniczone w niektórych krajach.
-                                Jesteś odpowiedzialny za przestrzeganie praw i regulacji obowiązujących na terytorium,
-                                z którego próbujesz uzyskać dostęp do Kujon.
-                            </li>
                             <li>Aby korzystać z Kujon, użytkownik musi się zarejestrować lub zalogować przy użyciu
                                 swojego konta w serwisie Facebook lub Google.
                             </li>
@@ -94,12 +88,9 @@
                                 jeśli nie akceptuje zmian w niniejszej Umowie, Polityce Prywatności lub w aplikacji
                                 Kujon.
                             </li>
-                            <li>Aby przestać korzystać z Kujon użytkownik musi usunąć aplikację ze swojego urządzenia
-                                mobilnego.
-                            </li>
                             <li>Niniejsza Umowa zawarta jest na czas nieokreślony. By rozwiązać Umowę, użytkownik
-                                przestać korzystać Kujon i usunąć aplikację ze swojego urządzenia mobilnego.
-                                Użytkownik posiada również możliwość usunięcia konta w serwisie
+                                powinien usunąć aplikację ze swojego urządzenia mobilnego ewentualnie
+                                ma możliwość usunięcia konta w serwisie
                                 <a href="https://kujon.mobi/">kujon.mobi</a></li>
                             <li>Operator zastrzega sobie prawa do usunięcia lub zawieszenia konta użytkownika w
                                 dowolnej chwili, bez podania dodatkowej informacji, w przypadku, gdy zaistnieją
@@ -113,7 +104,7 @@
                         </ol>
                         <h2>IV. KORZYSTANIE Z APLIKACJI</h2>
                         <ol>
-                            <li>1Aby skorzystać z Kujon użytkownik musi posiadać Smartfon, lub inne urządzenia z
+                            <li>Aby skorzystać z Kujon użytkownik musi posiadać Smartfon, lub inne urządzenia z
                                 systemem operacyjnym Android lub Apple, użądzenie musi posiadać dostęp do
                                 Internetu oraz usług lokalizacyjnych.
                             </li>
@@ -125,7 +116,7 @@
                         <ol>
                             <li>Użytkownik musi zaakceptować Regulamin.</li>
                             <li>Korzystanie z Kujon jest możliwe wyłącznie w celach prywatnych.</li>
-                            <li>3. Kujon, jak również wszelkie dotyczące go dane i informacje, wliczając w to teksty,
+                            <li>Kujon, jak również wszelkie dotyczące go dane i informacje, wliczając w to teksty,
                                 rozwiązania nawigacyjne (techniczne), loga, element graficzne etc. stanowią własność
                                 Operatora lub podmiotów trzecich, zgodnie z ustawą o Prawie Autorskim z of 1994.
                             </li>
@@ -134,7 +125,8 @@
                                 do korzystania z tej licencji, jak również nie ma prawa do jej przenoszenia ani
                                 dysponowania nią.
                             </li>
-                            <li>Kujon jest zintegrowany z USOS czyli Uniwersyteckim Systemem Obsługi Studiów, którego
+                            <li>Kujon jest zintegrowany z uczelnią użytkownika poprzez API USOS czyli interfejs
+                                Uniwersyteckiego Systemu Obsługi Studiów, którego
                                 właścicielem jest Międzyuniwersyteckie Centrum ds. Informatyzacji
                                 (<a href="http://muci.edu.pl/">MUCI</a>). Więcej informacji o USOS możesz znaleźć na
                                 stronie <a href="https://www.usos.edu.pl/">www.usos.edu.pl</a>
@@ -148,7 +140,7 @@
                         </ol>
                         <h2>VI. ODPOWIEDZIALNOŚĆ </h2>
                         <ol>
-                            <li>1. Operator dąży do zapewnienia jak najlepszego funkcjonowanie Aplikacji. Operator
+                            <li>Operator dąży do zapewnienia jak najlepszego funkcjonowanie Aplikacji. Operator
                                 nie jest jednak w stanie zagwarantować stałego dostępu do wszystkich jej
                                 funkcjonalności,
                                 ich idealnego działania oraz przewidzieć wypadki losowę mogące wpłynąć na działanie
@@ -169,7 +161,7 @@
                         <ol>
                             <li>Reklamacje związane z aplikacją, świadczonymi usługami lub inne można kierować
                                 na adres <a href="mailto:kujon@kujon.mobi">kujon@kujon.mobi</a></li>
-                            <li>2. W ciągu 10 dni od otrzymania reklamacji, użytkownik zostanie poinformowany o jej
+                            <li>W ciągu 10 dni od otrzymania reklamacji, użytkownik zostanie poinformowany o jej
                                 wyniku. Operator może zwrócić się do użytkownika z prośbą o dodatkowe informacje,
                                 w przypadku, gdy będą niezbędne do rozstrzygnięcia reklamacji.
                             </li>
@@ -202,9 +194,9 @@
                                         </li>
                                         <li>Komunikacji z tobą</li>
                                         <li>Analizy strony internetowej oraz samej aplikacji</li>
-                                        <li>Egzekwowania zasad zawartych w Regulaminie;</li>
-                                        <li>Wykonywania funkcji i usług wyszczególnionych w momencie pobrania danych.
-                                        </li>
+                                        <li>Egzekwowania zasad zawartych w Regulaminie</li>
+                                        <li>Wykonywania funkcji i usług wyszczególnionych w momencie pobrania danych</li>
+                                        <li>Wyświetlania spersonalizowanych reklam</li>
                                     </ol>
                                 </li>
                                 <li>Dane osobiste pozyskiwane przez Administratora zawierają między innymi:
@@ -228,15 +220,6 @@
                                 <li>Informacje o twoim numerze IP oraz twoim urządzeniu, jak również inne dane dotyczące
                                     twoich aktywności również mogą być przetwarzane.
                                 </li>
-                                <li>Chcemy pomóc w ochronie twoich danych i uniemożliwieniu dostępu do nich przez
-                                    podmioty niepożądane. Pamiętaj jednak, że żaden system nie jest całkowicie
-                                    bezpieczny. Dlatego, pomimo wszelkich starań z naszej strony mających na celu
-                                    ochronę twoich danych, nie możemy obiecać, że twoje dane osobiste, zawartość
-                                    konwersacji i inne formy komunikacji zawsze pozostaną bezpieczne. Użytkownicy
-                                    również powinni ostrożnie podchodzić do kwestii udostępniania wrażliwych informacji
-                                    dla osób trzecich oraz unikać ich przesyłania, w szczególności poprzez podejrzane
-                                    adresy email.
-                                </li>
                                 <li><p>Dane, które udostępniasz</p>
                                     <p>Możemy pozyskiwać i gromadzić zdjęcia i obrazy, które ustawiasz jako zdjęcie
                                         profilowe.
@@ -254,14 +237,6 @@
                                         Zalecamy okazjonalne sprawdzanie naszych Serwisów, w celu zapoznania się ze
                                         zmianami w
                                         naszej Polityce Prywatności etc.</p>
-                                </li>
-                                <li>
-                                Serwis nie zbiera w sposób automatyczny żadnych informacji, z wyjątkiem informacji zawartych
-                                    w plikach cookies. Pliki cookies (tzw. „ciasteczka”) stanowią dane informatyczne, w szczególności pliki
-                                tekstowe, które przechowywane są w urządzeniu końcowym Użytkownika Kujona i
-                                przeznaczone są do korzystania ze stron internetowych Serwisu. Cookies zazwyczaj
-                                zawierają nazwę strony internetowej, z której pochodzą, czas przechowywania ich na
-                                urządzeniu końcowym oraz unikalny numer.
                                 </li>
                                 <li>Pliki cookies wykorzystywane są w celu:
                                 dostosowania zawartości stron internetowych Serwisu do preferencji Użytkownika oraz
@@ -291,7 +266,7 @@
 
                         <h2>IX. POSTANOWIENIA KOŃCOWE</h2>
                         <ol>
-                            <li>Kujon jest upoważniona do dokonywania zmian w niniejszej Umowie i Politce prywatności w
+                            <li>Operator jest upoważniony do dokonywania zmian w niniejszej Umowie i Politce prywatności w
                                 dowolnym momencie. Jako użytkownik, zostaniesz poinformowany o zmianach z co najmniej 7 dniowym
                                 wyprzedzeniem. W przypadku braku zgody na proponowane zmiany, masz prawo do zerwania
                                 niniejszej Umowy.
