--- a/web/static/templates/disclaimer.html
+++ b/web/static/templates/disclaimer.html
@@ -97,7 +97,7 @@
                                 podejrzenia, że użykownik zerwał niniejszą Umowę, złamał zapisy niniejszej umowy, bądź z
                                 innego powodu.
                             </li>
-                            <li>Operator posiada prawo do zawieszenia działania Kujon lub do wycofania Kujon w
+                            <li>Operator posiada prawo do zawieszenia działania Kujon lub do wycofania Kujon ww
                                 dowolnej chwili, z dowolnego powodu, wprowadzania zmian oraz poszerzenia zakresu
                                 świadczonych usług.
                             </li>
