--- a/web/static/templates/modal_user.html
+++ b/web/static/templates/modal_user.html
@@ -4,7 +4,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="userModalLabel">{{first_name}} {{first_name}}</h4>
+                <h4 class="modal-title" id="userModalLabel">{{first_name}} {{last_name}}</h4>
             </div>
             <div class="modal-body" id="userBody{{user_id}}">
                 <div class="media">
