--- a/web/static/templates/user.html
+++ b/web/static/templates/user.html
@@ -1,11 +1,12 @@
 <div class="panel panel-default">
     <div class="panel-body">
+        {{#if google}}
         <div class="row">
             <div class="col-xs-2">
-                <img class="img-responsive" src="{{picture}}" alt="{{name}}" >
+                <img class="img-responsive" src="{{google.picture}}" alt="{{google.name}}" >
             </div>
             <div class="col-xs-10">
-                <h3 class="media-heading">{{name}} {{given_name}}</h3>
+                <h3 class="media-heading">Google</h3>
                 <table class="table table-hover table-responsive">
                     <thead>
                     <th></th>
@@ -14,24 +15,47 @@
                     <tbody>
                     <tr>
                         <td>Konto</td>
-                        <td>{{user_type}}</td>
+                        <td>{{google.name}}</td>
                         <td></td>
                     </tr>
                     <tr>
                         <td>Email</td>
-                        <td>{{email}}</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Data utworzenia</td>
-                        <td>{{user_created}}</td>
+                        <td>{{google.email}}</td>
                         <td></td>
                     </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-
+        {{/if}}
+        {{#if fb}}
+        <div class="row">
+            <div class="col-xs-2">
+                <img class="img-responsive" src="{{fb.picture}}" alt="{{fb.name}}" >
+            </div>
+            <div class="col-xs-10">
+                <h3 class="media-heading">Facebook</h3>
+                <table class="table table-hover table-responsive">
+                    <thead>
+                    <th></th>
+                    <th></th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Konto</td>
+                        <td>{{fb.name}}</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td>{{fb.email}}</td>
+                        <td></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        {{/if}}
 
         <div class="row">
             <div class="col-xs-2">
