fix scope for facebook auth

--- a/web/static/templates/user.html
+++ b/web/static/templates/user.html
@@ -28,10 +28,10 @@
             </div>
         </div>
         {{/if}}
-        {{#if fb}}
+        {{#if facebook}}
         <div class="row">
             <div class="col-xs-2">
-                <img class="img-responsive" src="{{fb.picture}}" alt="{{fb.name}}" >
+                <img class="img-responsive" src="{{facebook.picture}}" alt="{{facebook.name}}" >
             </div>
             <div class="col-xs-10">
                 <h3 class="media-heading">Facebook</h3>
@@ -43,12 +43,12 @@
                     <tbody>
                     <tr>
                         <td>Konto</td>
-                        <td>{{fb.name}}</td>
+                        <td>{{facebook.name}}</td>
                         <td></td>
                     </tr>
                     <tr>
                         <td>Email</td>
-                        <td>{{fb.email}}</td>
+                        <td>{{facebook.email}}</td>
                         <td></td>
                     </tr>
                     </tbody>
